--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,11 +2,61 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
+/* html,
 body,
 :root {
   height: 100%;
   background-color: black;
   color-scheme: dark;
   color: white;
+} */
+
+@layer base {
+  :root {
+    --background: 0 0% 0%;
+    --foreground: 213 31% 91%;
+
+    --muted: 223 47% 11%;
+    --muted-foreground: 215.4 16.3% 56.9%;
+
+    --popover: 224 71% 4%;
+    --popover-foreground: 215 20.2% 65.1%;
+
+    --card: 224 71% 4%;
+    --card-foreground: 213 31% 91%;
+
+    --border: 216 34% 17%;
+    --input: 216 34% 17%;
+
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 1.2%;
+
+    --secondary: 222.2 47.4% 11.2%;
+    --secondary-foreground: 210 40% 98%;
+
+    --accent: 0 0% 9%;
+    --accent-foreground: 210 40% 98%;
+
+    --destructive: 0 63% 31%;
+    --destructive-foreground: 210 40% 98%;
+
+    --ring: 216 34% 17%;
+
+    --radius: 0.5rem;
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  html,
+  :root {
+    @apply h-full;
+  }
+  body {
+    @apply bg-background text-foreground h-full text-white;
+    font-feature-settings: 'rlig' 1, 'calt' 1;
+    color-scheme: dark;
+  }
 }
